<resources>
    <string name="app_name">MarcadorTruco</string>
    <string name="app_title">Marcador de Truco</string>
    <string name="match_limit_message">A partida fecha com 12 pontos</string>
    <string name="score_progress_format">%1$d/12</string>
    <string name="winrate_format">V %1$d%% / D %2$d%%</string>
    <string name="default_player_1">Jogador 1</string>
    <string name="default_player_2">Jogador 2</string>
    <string name="score_zero">0</string>
    <string name="add_one_point">+1</string>
    <string name="add_three_points">+3</string>
    <string name="add_six_points">+6</string>
    <string name="add_nine_points">+9</string>
    <string name="add_twelve_points">+12</string>
    <string name="history_button">Histórico de jogadas</string>
    <string name="set_names_button">Informar nomes</string>
    <string name="reset_history_button">Zerar histórico</string>
    <string name="history_title">Histórico</string>
    <string name="history_item_format">%1$s: %2$d partida(s)</string>
    <string name="match_score_format">partida %1$d: %2$d - %3$d</string>
    <string name="show_match_scores_button">Mostrar placares das partidas</string>
    <string name="hide_match_scores_button">Ocultar placares das partidas</string>
    <string name="no_matches_history">Nenhuma partida registrada.</string>
    <string name="history_preview_player_1">Jogador 1: 0 partidas</string>
    <string name="history_preview_player_2">Jogador 2: 0 partidas</string>
    <string name="back_button">Voltar</string>
    <string name="set_names_title">Informar nomes</string>
    <string name="player_1_name_hint">Nome do Jogador 1</string>
    <string name="player_2_name_hint">Nome do Jogador 2</string>
    <string name="confirm_button">Confirmar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="history_reset_toast">Histórico reiniciado</string>
    <string name="reset_confirm_title">Zerar tudo?</string>
    <string name="reset_confirm_message">Pontuação, partidas registradas e nomes voltam ao início.</string>
    <string name="reset_confirm_button">Zerar</string>
    <string name="undo_last_play_button">Desfazer última jogada</string>
    <string name="undo_score_toast">Última jogada desfeita</string>
    <string name="no_score_to_undo_toast">Nenhuma jogada para desfazer</string>
    <string name="end_match_title">Fim da partida</string>
    <string name="winner_message">%1$s ganhou a partida!\n\nPlacar final: %2$s %3$d - %4$d %5$s</string>
    <string name="confirm_win_button">Confirmar vitória</string>
    <string name="leader_toast">%1$s assumiu o posto de maior vencedor!</string>
    <string name="wins_tied_toast">O número de vitórias está empatado.</string>
    <string name="ok_button">OK</string>
</resources>
